[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/textures/message.png" type="Texture" id=1]
[ext_resource path="res://ui/MenuLayer.gd" type="Script" id=2]
[ext_resource path="res://fonts/flappy-font-48.tres" type="DynamicFont" id=3]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="StartMessage" type="TextureRect" parent="StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -138.0
margin_top = -282.0
margin_right = 138.0
margin_bottom = 118.0
texture = ExtResource( 1 )

[node name="GameOverMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -282.0
margin_right = 168.0
custom_constants/separation = 15
alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 39.0
margin_right = 336.0
margin_bottom = 88.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Score: 0"
align = 1

[node name="HighscoreLabel" type="Label" parent="GameOverMenu/VBoxContainer"]
margin_top = 103.0
margin_right = 336.0
margin_bottom = 152.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 1
custom_fonts/font = ExtResource( 3 )
text = "Best: 0"
align = 1

[node name="RestartButton" type="Button" parent="GameOverMenu/VBoxContainer"]
margin_top = 167.0
margin_right = 336.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 75 )
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="GameOverMenu/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
